--- a/.env.example
+++ b/.env.example
@@ -45,4 +45,5 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-GOOGLE_KEY=secret_api_key
+MAPBOX_TOKEN="enter your Mapbox token"
+TINY_MCE_KEY="enter your TinyMCE api key"
